Bug 691230, basic jbig2 halftone image support.

Thanks to George Gottleuber for this work.